build: modified build.gradle.kts